# langstage-hermes

./: .gitignore  CHANGELOG.md  CUsersKedarAppDataLocalTemplangstage-hermes-cwd-test-dea4f21e.txt  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-354fd630.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-440a52ea.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-4a16f0ae.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-4ec001b7.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-5ffdd923.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-72bb7794.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-ab105b17.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-cfc1b433.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-dea4f21e.sh  CUsersKedarAppDataLocalTemplangstage-hermes-snap-test-ee84fbe9.sh  NOTICE  README.md  SPEC.md  deepagent-hermes.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: bench_summary.py  cli_smoke.py  dogfood.py  dogfood_openrouter.py  dogfood_procedural.py  host_adoption_smoke.py  live_smoke.py  live_smoke_reflection.py  load_into_deepagent_code.md  run_terminal_bench.sh  terminal_bench.py
prompts/: compression_summary.md  computer_use.md  default_identity.md  google_execution.md  session_search_guidance.md  tool_use_enforcement.md
skills/: README.md
spike/: extractor_bridge.py
src/deepagent_hermes/: __init__.py  agent.py  budget.py  caching.py  cli.py  compression.py  config.py  curator.py  extractors.py  prompts.py  reflection.py  state.py
src/deepagent_hermes/cron/: __init__.py  __main__.py  deliverers.py  jobs.py  scheduler.py  tool.py
src/deepagent_hermes/memory/: __init__.py  provider.py  threat_patterns.py  tool.py
src/deepagent_hermes/plugins/: __init__.py  context.py  event_bus.py  loader.py
src/deepagent_hermes/plugins/builtin/: __init__.py
src/deepagent_hermes/plugins/builtin/honcho_provider/: __init__.py  plugin.yaml
src/deepagent_hermes/plugins/builtin/markdown_provider/: __init__.py
src/deepagent_hermes/search/: __init__.py  session_search.py
src/deepagent_hermes/skills/: __init__.py  audit.py  library.py  loader.py  prompt.py  tools.py  validator.py
src/deepagent_hermes/store/: recorder.py  sqlite_fts.py
src/deepagent_hermes/tools/: clarify.py  file.py  registry.py  todo.py  toolsets.py
src/deepagent_hermes/tools/environments/: base.py  daytona.py  docker.py  local.py  modal.py  singularity.py  ssh.py
src/langstage_hermes/: __init__.py  agent.py  agui_stream.py  budget.py  cli.py  compression.py  config.py  curator.py  demo.py  extractors.py  prompts.py  reflection.py  state.py
src/langstage_hermes/_bundled_skills/: README.md
src/langstage_hermes/_prompts/: combined_review.md  curator_review.md  memory_guidance.md  memory_review.md  openai_execution.md  skill_review.md  skills_guidance.md  task_completion.md
src/langstage_hermes/_prompts/platform_hints/: cli.md  cron.md
src/langstage_hermes/cron/: __init__.py  __main__.py  deliverers.py  jobs.py  scheduler.py  tool.py
src/langstage_hermes/memory/: __init__.py  provider.py  tool.py
src/langstage_hermes/plugins/: __init__.py  context.py  event_bus.py  loader.py
src/langstage_hermes/plugins/builtin/: __init__.py
src/langstage_hermes/plugins/builtin/markdown_provider/: __init__.py  plugin.yaml
src/langstage_hermes/search/: session_search.py
src/langstage_hermes/skills/: __init__.py  library.py  loader.py  prompt.py  tools.py  validator.py
src/langstage_hermes/store/: __init__.py  recorder.py  sqlite_fts.py
src/langstage_hermes/tools/: __init__.py  clarify.py  file.py  registry.py  todo.py  toolsets.py
src/langstage_hermes/tools/environments/: __init__.py  base.py  daytona.py  docker.py  local.py  modal.py  singularity.py  ssh.py
tests/: conftest.py  test_agui_hermes.py  test_async_middleware_parity.py  test_bring_your_own_model.py  test_bundled_skills.py  test_caching_strategy.py  test_chat_consumes_spec.py  test_chat_key_preflight.py  test_chat_provider_pkg_hint.py  test_cli_banner.py  test_cli_show_config.py  test_cli_subcommands.py  test_compression.py  test_config.py  test_cron_deliverers.py  test_cron_jobs.py  test_cron_scheduler.py  test_curator_lifecycle.py  test_demo_offline.py  test_doctor_model_aware.py  test_honcho_provider.py  test_integration_smoke.py  test_iteration_budget.py  test_markdown_provider.py  test_memory_provider_abc.py  test_memory_provider_selection.py  test_memory_snapshot_frozen.py  test_openrouter_alias.py  test_plugin_event_bus.py  test_plugin_loader.py  test_prompt_assembly.py  test_real_model.py  test_reflection_trigger.py  test_rename_shim.py  test_search_cli.py  test_session_search_modes.py  test_skill_audit.py  test_skill_library.py  test_skill_loader.py  test_skill_validator.py  (+18 more)
