[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagent-hermes"
version = "0.1.0a0"
description = "Closed-loop reflection / skill creation agent on LangGraph + deepagents. Faithful reproduction of Nous Research's Hermes Agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kedar Dabhadkar", email = "kdabhadk@gmail.com" }]
keywords = ["langgraph", "deepagents", "agents", "skills", "hermes", "reflection"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langgraph-stream-parser>=0.2,<0.3",
    "deepagents>=0.6",
    "langchain>=1.0",
    "langchain-anthropic>=0.3",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "croniter>=2.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
honcho = ["honcho-ai>=0.0.10"]
daytona = ["daytona-sdk>=0.10"]
modal = ["modal>=0.64"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
deepagent-hermes = "deepagent_hermes.cli:main"

[project.urls]
Homepage = "https://github.com/dkedar7/deepagent-hermes"
Repository = "https://github.com/dkedar7/deepagent-hermes"
Issues = "https://github.com/dkedar7/deepagent-hermes/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deepagent_hermes"]

[tool.hatch.build.targets.wheel.shared-data]
"prompts" = "deepagent_hermes/_prompts"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that hit the network or take >1s",
    "needs_docker: tests requiring Docker installed",
    "needs_honcho: tests requiring HONCHO_API_KEY",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
