[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langstage-hermes"
version = "0.4.19"
description = "Closed-loop reflection / skill creation agent on LangGraph + deepagents. Faithful reproduction of Nous Research's Hermes Agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kedar Dabhadkar", email = "kdabhadk@gmail.com" }]
keywords = ["langgraph", "langchain", "langstage", "agents", "skills", "hermes", "reflection"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Since core 1.0 (ADR 0003) hermes streams every turn ONLY through the
    # in-process AG-UI adapter — there is no built-in parser fallback — so the
    # AG-UI runtime (ag-ui-langgraph[fastapi] + uvicorn, via core's [agui] extra)
    # is a HARD dep. A bare `pip install langstage-hermes` must be able to run a turn.
    # >=1.0.7 for the shared workspace source of truth (apply_workspace/workspace_root).
    # >=1.0.13 for the _malformed_toml set + warning dedupe (gh #61).
    # >=1.0.14 for describe(omit_keys=, configurable=) — the single complete diagnostic.
    "langstage-core[agui]>=1.0.14",
    "deepagents>=0.6",
    "langchain>=1.0",
    "langchain-anthropic>=0.3",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "croniter>=2.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
# Redundant since AG-UI moved into base deps (core 1.0); kept as a no-op alias so
# existing `pip install langstage-hermes[agui]` scripts/READMEs still resolve.
agui = ["langstage-core[agui]>=1.0.7"]
daytona = ["daytona-sdk>=0.10"]
modal = ["modal>=0.64"]
ssh = ["paramiko>=3.0"]
# `real` is the test-suite alias for `openai` — kept so tests/test_real_model.py
# keeps working without contributors having to remember a new extras name.
real = ["langchain-openai>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff==0.15.15",
    "mypy>=1.10",
    "ag-ui-langgraph>=0.0.41",
    "fastapi",
]

[project.scripts]
langstage-hermes = "langstage_hermes.cli:main"
# Deprecated alias command - kept for one transition window.
deepagent-hermes = "langstage_hermes.cli:main"

[project.urls]
Homepage = "https://github.com/dkedar7/langstage-hermes"
Repository = "https://github.com/dkedar7/langstage-hermes"
Issues = "https://github.com/dkedar7/langstage-hermes/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langstage_hermes", "src/deepagent_hermes"]
# Bundled prompt files + 26 SKILL.md library both live inside the package
# tree now (src/deepagent_hermes/_prompts/, src/deepagent_hermes/_bundled_skills/);
# hatch's default file selection picks them up automatically. The earlier
# `shared-data` table put files under `share/` at install time — i.e. NOT
# inside the package — which is why v0.1.0 / v0.1.1 wheels crashed on first
# chat.

[tool.hatch.build.targets.sdist]
# Default sdist behaviour is "include all git-tracked files" — which is what
# we want. The earlier explicit `include = [_prompts, _bundled_skills]` here
# was *restrictive*: it shipped only those two trees and dropped every .py
# file, so `python -m build` (sdist → wheel-from-sdist) produced a 183-entry
# wheel with no Python code. The published v0.1.2 wheel is that broken wheel;
# every install crashes with `ModuleNotFoundError: deepagent_hermes.cli`.
# Local `python -m build --wheel` worked because it skipped the sdist step;
# release CI's `python -m build` did not. Leaving the section empty restores
# hatch's "all tracked files" default for both sdist and wheel-from-sdist.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that hit the network or take >1s",
    "needs_docker: tests requiring Docker installed",
    "needs_ssh: tests requiring a real SSH server",
    "needs_singularity: tests requiring Singularity/Apptainer on PATH",
    "needs_daytona: tests requiring Daytona SDK and API key",
    "needs_modal: tests requiring Modal SDK and tokens",
    "real_model: hits a live LLM via OpenRouter (opt-in; skips without OPENROUTER_API_KEY)",
]

[tool.ruff]
line-length = 130
target-version = "py311"
# Vendored, standalone agent-skill scripts inside bundled SKILL.md packages —
# upstream patterns ruff dislikes (sys.path setup before imports, re-export
# aliases, etc.). Not part of our source surface; don't lint or reformat.
extend-exclude = ["src/langstage_hermes/_bundled_skills/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = [
    "PLR0913",  # too-many-arguments — middleware constructors legitimately have many params
    "PLR0911",  # too-many-return-statements — explicit early-return is clearer than nesting
    "PLR0912",  # too-many-branches — same; some dispatch tables are unavoidable
    "PLR0915",  # too-many-statements — long impls like the cron scheduler / state recorder
    "PLR2004",  # magic-value-comparison — many thresholds are intentional literals from SPEC
    "PLC0415",  # import-outside-top-level — DELIBERATE lazy imports for optional deps (paramiko / modal / daytona)
    "PLE2502",  # bidirectional-unicode — the `§` memory delimiter is load-bearing (matches Hermes verbatim)
    "PLW0603",  # global-statement — plugin hook registry uses a module-level global by design
    "PLW1510",  # subprocess-run-without-check — many subprocess calls want raw returncode for ExecuteResponse
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLC0415"]
"examples/*" = ["PLC0415", "PLR2004"]
